Lucky Islands data